[project]
name = "pipen-cli-run"
version = "1.0.4"
description = "A pipen cli plugin to run a process or a pipeline"
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pipen-args>=1.2",
]

[project.urls]
Homepage = "https://github.com/pwwang/pipen-cli-run"
Repository = "https://github.com/pwwang/pipen-cli-run"

[project.entry-points."pipen_cli"]
cli-run = "pipen_cli_run:PipenCliRunPlugin"

[dependency-groups]
dev = [
    "flake8>=7",
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-xdist>=3",
    "pytest-forked>=1",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.pytest.ini_options]
# addopts = "-vv --cov-config=.coveragerc --cov=pipen_cli_run --cov-report xml:.coverage.xml --cov-report term-missing"
addopts = "-vv -n auto -p no:asyncio --cov-config=.coveragerc --cov=pipen_cli_run --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [
    #"error"
    "ignore:.*use of fork\\(\\) may lead to deadlocks in the child.*"
]
console_output_style = "progress"
junit_family = "xunit1"
